# ContrAI

./: .gitattributes  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  all.txt  conda_packages.txt  dataset_testing.ipynb  deps.txt  evaluation.ipynb  example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  top.txt
UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt
contrai/data/: goes16.py  mtg_fci.py
contrai/data/opencontrails_polygons/val/annotations/coco_format/: instances_val7.json
contrai/models/instance_segmentation/mrcnn/: detectron2_maskrcnn.ipynb
contrai/models/semantic_segmentation/coat/: predict.py  utils.py
contrai/models/semantic_segmentation/coat/weights/contrail/: model.pth
contrai/models/semantic_segmentation/coat/weights/pretrained/: coat_small_7479cf9b.pth
data/: README.md
datasets/opencontrails_polygons/train/annotations/coco_format/: instances_train7.json
econtrail_detection/: __init__.py  predict.py  utils.py
econtrail_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/semantic_segmentation/econtrail_detection/: predict.py  predict_old.py  utils.py  vis.py
models/semantic_segmentation/econtrail_detection/weights/pretrained/: coat_small_7479cf9b_checkpoint.pth
notebooks/: ContrAI_Demo.ipynb  contrail_demo.html  contrail_detection_demo.html  detect_contrails.ipynb  goes16_download.ipynb  polygon_based_opencontrails.ipynb  test_fci_download.ipynb
notebooks/images/goes16_l1b/2023/07/12/1200/: OR_ABI-L1b-RadF-M6C11_G16_s20231931200208_e20231931209516_c20231931209549.nc  (+3 more)
test_images/: README.md
(+71 files in other folders)
