[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "econtrail-detection"
version = "0.1.0"
description = "Satellite contrail detection and segmentation using deep learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]

dependencies = [
    "torch>=2.0",
    "torchvision",
    "numpy",
    "matplotlib",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/irortiza/ECONTRAIL_detection"
